# GroupwiseThinShellDemons

./: CMakeLists.txt  ComputationalTools.cpp  ComputeGeometricEntity.cpp  Demons.cpp  GlutManager.cpp  GlutManager.h  MeshObject.h  Optimization-lbfgs.cpp  Optimization-lbfgs_initial.cpp  SignatureManager.cpp  stdafx.h
